--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -157,7 +157,7 @@
             <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
           {%- endif %}
           {%- if entry.dataset %}
-            <a href="{{ entry.dataset }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
+            <a href="{{ entry.dataset }}" class="btn btn-sm z-depth-0" role="button">Dataset</a>
           {%- endif %}
           {%- if entry.code %}
             <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
